# cmd/api/middlewares.go
@@ -8,7 +8,10 @@ import (
 	"strings"
 
 	"faissal.com/blogSpace/internal/keys"
+	"faissal.com/blogSpace/internal/repository"
 	"faissal.com/blogSpace/internal/services"
+	"faissal.com/blogSpace/internal/utils"
+	"github.com/charmbracelet/log"
 	"github.com/go-chi/chi/v5"
 	"github.com/golang-jwt/jwt/v5"
 )
@@ -44,6 +47,7 @@ func (app *Application) AuthMiddleware(next http.Handler) http.Handler {
 		jwtToken, err := app.Authentication.VerifyToken(token)
 		if err != nil {
 			app.BadRequestErrorResponse(w, r, err)
+			log.Info("halo", err)
 			return
 		}
 
@@ -79,13 +83,50 @@ func (app *Application) AuthMiddleware(next http.Handler) http.Handler {
 	})
 }
 
+func (app *Application) CheckOwnerCommentMiddleware(next http.HandlerFunc) http.HandlerFunc {
+
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+
+		userAuth, err := utils.GetContentFromContext[repository.User](r, UsrCtx)
+		if err != nil {
+			app.InternalServerErrorResponse(w, r, err)
+			return
+		}
+
+		commentId, err := strconv.Atoi(chi.URLParam(r, "ID"))
+		if err != nil {
+			app.BadRequestErrorResponse(w, r, err)
+			return
+		}
+
+		comment, err := app.Services.Comments.GetCommentById(r.Context(), commentId)
+		if err != nil {
+			switch err {
+			case services.ErrCommentNotFound:
+				app.NotFoundErrorResponse(w, r, err)
+			default:
+				app.InternalServerErrorResponse(w, r, err)
+			}
+
+			return
+		}
+
+		// TODO: add blog's author can delete the comment
+		if userAuth.Id != comment.UserId {
+			app.ForbiddenErrorResponse(w, r)
+			return
+		}
+
+		next.ServeHTTP(w, r)
+
+	})
+}
+
 func (app *Application) GetCategoryMiddleware(next http.HandlerFunc) http.HandlerFunc {
 
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 
-		id := chi.URLParam(r, "ID")
-
-		catId, err := strconv.Atoi(id)
+		catId, err := strconv.Atoi(chi.URLParam(r, "ID"))
 		if err != nil {
 			app.InternalServerErrorResponse(w, r, err)
 			return
